--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.3.4",
         "@vitejs/plugin-vue": "^6.0.3",
